# laptop_ws

./: 1  README.md  frames.gv  landmarks.txt  scan.csv
Extra_Packages/laser_filters/examples/: range_filter.yaml
Extra_Packages/matplotlib-cpp/examples/: animation  basic  nonblock
Sensors/ethzasl_xsens_driver-master/launch/: xsens_driver.launch
Sensors/leica_tca1100/launch/: prism.launch
Sensors/leica_tca1100/src/: leica_tca1100.copy2
Sensors/trigger_sync-master/: CMakeLists.txt
Sensors/trigger_sync-master/src/: trigger_sync.cpp
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/driver_base/: ConfigString.h  ConfigValue.h  SensorLevels.h
devel/include/rosserial_arduino/: Adc.h  TestRequest.h  TestResponse.h
devel/include/rosserial_mbed/: Adc.h  TestRequest.h  TestResponse.h
devel/include/rosserial_msgs/: Log.h  RequestMessageInfoRequest.h  RequestMessageInfoResponse.h  RequestParamRequest.h  RequestParamResponse.h  RequestServiceInfoRequest.h  RequestServiceInfoResponse.h  TopicInfo.h
devel/include/thorvald_2d_nav/: GpsSwitch.h  GpsSwitchRequest.h  GpsSwitchResponse.h  landmarks.h  scan_detected_line.h  sub_goal.h  sub_goalRequest.h  sub_goalResponse.h
devel/include/trigger_sync/: Event.h  EventStamped.h
devel/lib/laser_filters/: generic_laser_filter_node  scan_to_cloud_filter_chain  scan_to_scan_filter_chain  test_scan_filter_chain
devel/lib/leica_tca1100/: leica_tca1100
devel/lib/odometry_package/: odometry_package_node
devel/lib/pkgconfig/: driver_base.pc  laser_filters.pc  leica_tca1100.pc  libpcan.pc  nmea_navsat_driver.pc  odometry_package.pc  plot_demo.pc  plot_tool.pc  razor_imu_9dof.pc  robot_localization.pc  ros_csv_extraction.pc  rosserial_arduino.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_test.pc  rosserial_tivac.pc  rosserial_windows.pc  rosserial_xbee.pc  rplidar_ros.pc  serial.pc  thorvald_2d_nav.pc  timestamp_tools.pc  trigger_sync.pc  xsens_driver.pc
devel/lib/plot_demo/: demo
devel/lib/robot_localization/: ekf_localization_node  navsat_transform_node  robot_localization_listener_node  test_ros_robot_localization_listener_publisher  ukf_localization_node
devel/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
devel/lib/serial/: serial_example
odometry_package/launch/: gmapping.launch
odometry_package/src/: odometry_package_node.cpp
robot_localization-kinetic-devel/params/: dual_ekf_navsat_example.yaml  navsat_transform_template.yaml
src/odometry_package/: CMakeLists.txt
src/thorvald_2d_nav/: CMakeLists.txt  gazebo_row_transition.launch  package.xml  thorvald_bringup_sim.launch  thorvald_hokuyo_poles_ii.world
src/thorvald_2d_nav/config/: costmap_common_params.yaml  my_laser_config.yaml
src/thorvald_2d_nav/include/thorvald_2d_nav/: test_RANSAC.h  test_control_modes.h  test_line_SLAM.h  test_row_transition.h  thorvald_control_modes.h  thorvald_line_SLAM.h
src/thorvald_2d_nav/launch/: fake_line.launch  gazebo_plugin_4wd.launch  gazebo_row_transition.launch  gm_slam.launch  gps_alone.launch  hokuyo_bringup.launch  ransac.launch  record.launch  row_follow.launch  row_transition.launch  thorvald_bringup_sim.launch
src/thorvald_2d_nav/msg/: landmarks.msg  scan_detected_line.msg
src/thorvald_2d_nav/rviz/: fastSLAM.rviz  lincoln.rviz
src/thorvald_2d_nav/src/: .guinea_pig.cpp.swp  .row_transition.cpp.swm  .row_transition.cpp.swn  .row_transition.cpp.swo  .thorvald_control_modes.cpp.swo  .thorvald_control_modes.cpp.swp  .thorvald_line_SLAM.cpp.swp  fake_line.cpp  fastSLAM.cpp  gazebo_line.cpp  gps_client.cpp  guinea_pig.cpp  lab_rat.cpp  laser_points_count.cpp  row_transition.cpp  test_RANSAC.cpp  test_control_modes.cpp  test_fusion.cpp  test_line_SLAM.cpp  test_row_transition.cpp  thorvald_RANSAC.cpp  thorvald_RANSAC_updated.cpp  thorvald_control_modes.cpp  thorvald_laserscan.cpp  thorvald_line_SLAM.cpp
src/thorvald_2d_nav/world/: row_transition.world  thorvald_hokuyo_poles_ii.world
thorvald_2d_nav/: CMakeLists.txt  package.xml  row_transition_i.world  thorvald_hokuyo_poles.world
thorvald_2d_nav/config/: dwa_local_planner_params.yaml  dwa_planner_ros-nw.yaml  dwa_planner_ros-old.yaml  empty_costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
thorvald_2d_nav/launch/: .row_follow_sim.launch.swp  amcl.launch  floy3_amcl.launch  floy3_fusion.launch  floy3_fusion_gazebo.launch  floy_3_amcl.launch  gazebo_row_transition.launch  move_base_nav.launch  recorded_scan.launch  row_follow_sim.launch  thor_localization.launch  thor_localization_map.launch
thorvald_2d_nav/msg/: landmarks.msg
thorvald_2d_nav/params/: base_global_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  move_base_params.yaml
thorvald_2d_nav/rviz/: lincoln.rviz
thorvald_2d_nav/src/: .floy3_line_SLAM.cpp.swp  .guinea_pig.cpp.swo  .lab_rat.cpp.swp  .row_transition.cpp.swp  .thorvald_control_modes.cpp.swo  floy3_RANSAC.cpp  floy3_control_modes.cpp  floy3_fusion.cpp  floy3_line_SLAM.cpp  gps_server.cpp  simple_navigation_goals.cpp  test_RANSAC.cpp  test_control_modes.cpp  test_fusion.cpp  test_row_transition.cpp  thorvald_RANSAC.cpp  thorvald_laserscan_old.cpp  thorvald_line_SLAM.cpp  thorvald_row_transition.cpp
thorvald_2d_nav/world/: just_three_rows.world  row_transition.world
waypoints_nmbu/: CMakeLists.txt  README.md  package.xml
waypoints_nmbu/launch/: navigate_waypoints.launch  navigate_waypoints_lincoln.launch  navigate_waypoints_mb.launch  record_waypoints.launch
waypoints_nmbu/src/: gps_waypoints_nav.cpp  gps_waypoints_nav_mb.cpp  simple_navigation_goals_mb.cpp  waypoint_saver.cpp
waypoints_nmbu/waypoints_files/: ground_truth.yaml  waypoints_floy3.yaml  waypoints_floy3_1.yaml  waypoints_floy3_2.yaml  waypoints_floy3_3.yaml  waypoints_floy4.yaml  waypoints_sim_1.yaml  waypoints_sim_2.yaml
(+139 files in other folders)
